--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
 PYTHON_ENV=dev
 PORT=8000
-SECRET_KEY=django-secret-key-for-the-project-to-be-used-for-this-project-people
-GS_BUCKET_NAME=django_dev_bucket11
+SECRET_KEY=django-insecure-sw+m-hg7i6o3c&w@h-vptkm!*&0%!@ikk27cw_512bomqg5_@w
+GS_BUCKET_NAME=demo-storage1
 
 USE_CLOUD_SQL_AUTH_PROXY=True
 GOOGLE_CLOUD_PROJECT=kin-project-352614
 
-DATABASE_URL=postgres://djangodevdbadmin:djangodevdbadminpassword@//cloudsql/kin-project-352614:europe-west1:django-dev-db/djangodevdb
+DATABASE_URL=postgres://demodbadmin:demodbadminpassword@//cloudsql/kin-project-352614:europe-west1:kin-project-postgresql-v2/demodb
 
 GOOGLE_APPLICATION_CREDENTIALS=/secrets/creds.json
