--- a/.env.prod
+++ b/.env.prod
@@ -1,3 +1,3 @@
-SECRET_KEY=<SECRET>
-GS_BUCKET_NAME=django_dev_bucket11
-DATABASE_URL=postgres://djangodevdbadmin:djangodevdbadminpassword@//cloudsql/kin-project-352614:europe-west1:django-dev-db/djangodevdb
+SECRET_KEY=django-insecure-sw+m-hg7i6o3c&w@h-vptkm!*&0%!@ikk27cw_512bomqg5_@w
+GS_BUCKET_NAME=demo-storage1
+DATABASE_URL=postgres://demodbadmin:demodbadminpassword@//cloudsql/kin-project-352614:europe-west1:kin-project-postgresql-v2/demodb
