--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -5,7 +5,7 @@ steps:
       - build
       - '--no-cache'
       - '-t'
-      - 'us.gcr.io/kin-project-352614/django-cloudrun/cicd:myimagev1'
+      - '$_GCR_HOSTNAME/$PROJECT_ID/$REPO_NAME/$_SERVICE_NAME:$COMMIT_SHA'
       - .
       - '-f'
       - Dockerfile
@@ -15,18 +15,18 @@ steps:
   - name: gcr.io/cloud-builders/docker
     args:
       - push
-      - 'us.gcr.io/kin-project-352614/django-cloudrun/cicd:myimagev1'
+      - '$_GCR_HOSTNAME/$PROJECT_ID/$REPO_NAME/$_SERVICE_NAME:$COMMIT_SHA'
     id: Push
 
   # 2. Make migrations
   - name: gcr.io/google-appengine/exec-wrapper
     args:
       - '-i'
-      - 'us.gcr.io/kin-project-352614/django-cloudrun/cicd:myimagev1'
+      - '$_GCR_HOSTNAME/$PROJECT_ID/$REPO_NAME/$_SERVICE_NAME:$COMMIT_SHA'
       - '-s'
-      - 'kin-project-352614:europe-west1:django-dev-db'
+      - '${PROJECT_ID}:${_DEPLOY_REGION}:${_DB_INSTANCE}'
       - '-e'
-      - 'SETTINGS_NAME=django_app_settings'
+      - 'SETTINGS_NAME=${_SECRET_SETTINGS_NAME}'
       - '--'
       - 'python'
       - 'manage.py'
@@ -37,11 +37,11 @@ steps:
   - name: gcr.io/google-appengine/exec-wrapper
     args:
       - '-i'
-      - 'us.gcr.io/kin-project-352614/django-cloudrun/cicd:myimagev1'
+      - '$_GCR_HOSTNAME/$PROJECT_ID/$REPO_NAME/$_SERVICE_NAME:$COMMIT_SHA'
       - '-s'
-      - 'kin-project-352614:europe-west1:django-dev-db'
+      - '${PROJECT_ID}:${_DEPLOY_REGION}:${_DB_INSTANCE}'
       - '-e'
-      - 'SETTINGS_NAME=django_app_settings'
+      - 'SETTINGS_NAME=${_SECRET_SETTINGS_NAME}'
       - '--'
       - 'python'
       - 'manage.py'
@@ -52,11 +52,11 @@ steps:
   - name: gcr.io/google-appengine/exec-wrapper
     args:
       - '-i'
-      - 'us.gcr.io/kin-project-352614/django-cloudrun/cicd:myimagev1'
+      - '$_GCR_HOSTNAME/$PROJECT_ID/$REPO_NAME/$_SERVICE_NAME:$COMMIT_SHA'
       - '-s'
-      - 'kin-project-352614:europe-west1:django-dev-db'
+      - '${PROJECT_ID}:${_DEPLOY_REGION}:${_DB_INSTANCE}'
       - '-e'
-      - 'SETTINGS_NAME=django_app_settings'
+      - 'SETTINGS_NAME=${_SECRET_SETTINGS_NAME}'
       - '--'
       - 'python'
       - 'manage.py'
@@ -70,23 +70,20 @@ steps:
       - run
       - services
       - update
-      - cicd
+      - $_SERVICE_NAME
       - '--platform=managed'
-      - '--image=us.gcr.io/kin-project-352614/django-cloudrun/cicd:myimagev1'
-      # - >-
-      #   --labels=managed-by=gcp-cloud-build-deploy-cloud-run,commit-sha=myimagev1,gcb-build-id=hailat-build-id,gcb-trigger-id=hailat-trigger,gcb-trigger-idhailat-trigger
-      - '--region=europe-west1'
+      - '--image=$_GCR_HOSTNAME/$PROJECT_ID/$REPO_NAME/$_SERVICE_NAME:$COMMIT_SHA'
+      - >-
+        --labels=managed-by=gcp-cloud-build-deploy-cloud-run,commit-sha=$COMMIT_SHA,gcb-build-id=$BUILD_ID,gcb-trigger-id=$_TRIGGER_ID,$_LABELS
+      - '--region=$_DEPLOY_REGION'
       - '--quiet'
     id: Deploy
     entrypoint: gcloud
 
 # Store images in Google Artifact Registry
 images:
-  - 'us.gcr.io/kin-project-352614/django-cloudrun/cicd:myimagev1'
+  - '$_GCR_HOSTNAME/$PROJECT_ID/$REPO_NAME/$_SERVICE_NAME:$COMMIT_SHA'
 
 tags:
   - gcp-cloud-build-deploy-cloud-run
   - gcp-cloud-build-deploy-cloud-run-managed
-  
-options:
-  logging: CLOUD_LOGGING_ONLY
